# gstreamer_examples

./: .gitignore  CMakeLists.txt  README.md  config.hpp  gst_multicast_handler.hpp  gst_multicast_receiver.hpp  main.cpp
